--- a/portal/templates/forms/addStudent.html
+++ b/portal/templates/forms/addStudent.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Guide Portal</title>
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -9,11 +10,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+
+     <script type="text/javascript">
+        $(document).ready(function(){
+            $(".button-collapse").sideNav({
+                menuWidth: 250, // Default is 300
+                edge: 'left', // Choose the horizontal origin
+                closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+                draggable: false // Choose whether you can drag to open on touch screens
+            });
+            $('.modal').modal();
+            });
+    </script>
+    <style>
+      .container {
+        margin: 0 auto;
+        max-width: 1280px;
+        width: 90%;
+      }
+      @media  only screen and (min-width: 601px){.container{width:60%}}
+      @media  only screen and (min-width: 993px){.container{width:90%}}
+    </style>
 </head>
 
 <body ng-app="myApp" ng-controller="myCtrl" ng-init="edited = 0">
 	<div class="container">
-		
+		<input type="hidden" id="last_login" value="{{ last_login }}" />
+
 		<div class="row">
 			<div class="col s8">
 			  Search: 
@@ -31,93 +54,99 @@
 		<table class="bordered">
 			<thead>
 				<tr>
-					<th ng-click="orderByMe('fields.user[0]')">Student Id</th>
-					<th ng-click="orderByMe('fields.first_name')">First Name</th>
-					<th ng-click="orderByMe('fields.last_name')">Last Name</th>
+					<th ng-click="orderByMe('fields.user.username')">Student Id</th>
+					<th ng-click="orderByMe('fields.user.first_name')">First Name</th>
+					<th ng-click="orderByMe('fields.user.last_name')">Last Name</th>
 					<th ng-click="orderByMe('fields.branch')">Branch</th>
 					<th ng-click="orderByMe('fields.year')">Year</th>
-					<th><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="addStud()">add</i></a></th>
+					<th><a data-target="modal1" class="btn-floating btn-small waves-effect waves-light red modal-trigger"><i class="material-icons" ng-click="addStud()">add</i></a></th>
 				</tr>
 			</thead>
 			<tbody>
 				{% csrf_token %}
 				{% verbatim %}
 				<tr ng-repeat="student in students | orderBy:sort:reverse | filter: tableValue">
-					<td ng-if="edited == student.pk">{{student.fields.user.username}}</td>
-					<td ng-if="edited == student.pk"><div class="input-field"><input id="first_name" type="text" value={{student.fields.user[1]}} /></div></td>
-					<td ng-if="edited == student.pk"><div class="input-field"><input id="last_name" type="text" value={{student.fields.user[2]}} /></div></div></td>
-					<td ng-if="edited == student.pk"><div class="input-field"><input id="branch" type="text" value={{student.fields.branch}} /></div></td>
-					<td ng-if="edited == student.pk"><div class="input-field"><input id="year" type="text" value={{student.fields.year}} /></div></td>	
+					<td ng-if="edited == student.fields.user.username">{{student.fields.user.username}}</td>
+					<td ng-if="edited == student.fields.user.username"><div class="input-field"><input id="first_name" type="text" value={{student.fields.user.first_name}} /></div></td>
+					<td ng-if="edited == student.fields.user.username"><div class="input-field"><input id="last_name" type="text" value={{student.fields.user.last_name}} /></div></div></td>
+					<td ng-if="edited == student.fields.user.username"><div class="input-field"><input id="branch" type="text" value={{student.fields.branch}} /></div></td>
+					<td ng-if="edited == student.fields.user.username"><div class="input-field"><input id="year" type="text" value={{student.fields.year}} /></div></td>	
 
-					<td ng-if="edited != student.pk">{{student.fields.user.username}}</td>
-					<td ng-if="edited != student.pk">{{student.fields.user.first_name}}</td>
-					<td ng-if="edited != student.pk">{{student.fields.user.last_name}}</td>
-					<td ng-if="edited != student.pk">{{student.fields.branch}}</td>
-					<td ng-if="edited != student.pk">{{student.fields.year}}</td>
+					<td ng-if="edited != student.fields.user.username">{{student.fields.user.username}}</td>
+					<td ng-if="edited != student.fields.user.username">{{student.fields.user.first_name}}</td>
+					<td ng-if="edited != student.fields.user.username">{{student.fields.user.last_name}}</td>
+					<td ng-if="edited != student.fields.user.username">{{student.fields.branch}}</td>
+					<td ng-if="edited != student.fields.user.username">{{student.fields.year}}</td>
 
-					<td ng-if="edited != student.pk"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(student.pk)">create</i></a></td>
-					<td ng-if="edited == student.pk"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="updatevalue(student)">update</i></a></td>
+					<td ng-if="edited != student.fields.user.username"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(student.fields.user.username)">create</i></a></td>
+					<td ng-if="edited == student.fields.user.username"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="updatevalue(student)">update</i></a></td>
 					
-					<td ng-if="edited == student.pk"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(0)">cancel</i></a></td>
-					<td ng-if="edited != student.pk"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="delete(student.pk, student.fields.user.username)">delete</i></a></td>
+					<td ng-if="edited == student.fields.user.username"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(0)">cancel</i></a></td>
+					<td ng-if="edited != student.fields.user.username"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="delete(student.fields.user.username)">delete</i></a></td>
 				</tr>
 				{% endverbatim %}
 			</tbody>
 		</table>
 
-		<div ng-if="add" class="row">
-            <div class="col s12">
-				<form class="col s12 m12" method="POST" action="/portal/guide/students/add/" accept-charset="UTF-8">
-					{% csrf_token %}
-					<div class="input-field col s12 m4 offset-m4 offset-l4">
-						<input id="stud_id" type="text" name="stud_id" required="yes" maxlength="10" title="Alphanumerics, only with 10 characters">
-						<label for="stud_id">Student ID</label><br>
-					</div>
 
-					<div class="input-field col s12 m4 offset-m4 offset-l4">
-						<input id="first_name" type="text" name="first_name" required="yes" maxlength="20" title="First Name">
-						<label for="first_name">First Name</label><br>
-					</div>
-
-					<div class="input-field col s12 m4 offset-m4 offset-l4">
-						<input id="last_name" type="text" name="last_name" required="yes" maxlength="20" title="Last_name">
-						<label for="last_name">Last Name</label><br>
-					</div>
-					<div class="input-field col s12 m4 offset-m4 offset-l4">
-						<input id="branch" type="text" name="branch" required="yes" maxlength="3" title="3 letter branch name">
-						<label for="last_name">Branch</label><br>
-					</div>
-
-					<div class="input-field col s12 m4 offset-m4 offset-l4">
-						<input id="year" type="text" name="year" required="yes" maxlength="4" title="Joining year">
-						<label for="last_name">Year</label>
-					</div>
-					<div class="row">
-		             	<div class="input-field col s12 center">
-		                	<input type="submit" class="waves-effect waves-light btn blue" value="Add student">
+		<div id="modal1" class="modal bottom-sheet">
+		    <div class="modal-content">
+		    	<h4>Add student</h4>
+		        <div class="row">
+	        		<div class="col s12 m12">
+	        			<div class="input-field inline">
+							<input id="username_add" type="text" name="username" required="yes" maxlength="10" title="Alphanumerics, only with 10 characters">
+							<label for="username">Student ID</label>
 						</div>
+						<div class="input-field inline">
+							<input id="first_name_add" type="text" name="first_name" required="yes" maxlength="20" title="First Name">
+							<label for="first_name">First Name</label>
+						</div>
+						<div class="input-field inline">
+							<input id="last_name_add" type="text" name="last_name" required="yes" maxlength="20" title="Last_name">
+							<label for="last_name">Last Name</label>
+						</div>
+	        			<div class="input-field inline">
+							<input id="email_add" type="email" name="email" required="yes" maxlength="50" title="Email address">
+							<label for="email">Email</label>
+						</div>
+						<div class="input-field inline">
+							<input id="branch_add" type="text" name="branch" required="yes" maxlength="3" title="3 letter branch name">
+							<label for="last_name">Branch</label>
+						</div>
+						<div class="input-field inline">
+							<input id="year_add" type="text" name="year" required="yes" maxlength="4" title="Joining year">
+							<label for="last_name">Year</label>
+						</div>
+						<div class="input-field inline">
+	                		<input type="button" class="waves-effect waves-light btn blue" ng-click="addstudent()" value="Add student">
+	                	</div>
 					</div>
-				</form>
+			    </div>
 			</div>
 		</div>
+
 	</div>
 
 	<script type="text/javascript">
 		var app = angular.module('myApp', []);
 		app.controller('myCtrl', function($scope, $http) {
 			
-			$scope.sort = "fields.stud_id";
+			if(jQuery("[id=last_login]").val() != "")
+				Materialize.toast('Last Login: ' + jQuery("[id=last_login]").val(), 4000, 'rounded');
+
+			$scope.sort = "fields.user.username";
 			$scope.reverse = false;
 			$scope.add = false;
 			
-			$scope.edit= function(pk){
-            	$scope.edited= pk;
+			$scope.edit= function(username){
+            	$scope.edited= username;
             }
 
 
  			
 		 	// new changes		
-			$scope.delete= function(pk, username){
+			$scope.delete= function(username){
 				var message= confirm('Are you sure you want to save this thing into the database?');
 			   if (message) {
 					
@@ -129,35 +158,83 @@
 			        }
 			    });
 				} else {
-					Materialize.toast('Changed mind', 4000);
+					Materialize.toast('Changed mind', 2000);
 				}
 			   
             }
-            $scope.updatevalue = function(student){
-		    if(student.fields.first_name == $('#first_name').val() && student.fields.last_name == $('#last_name').val() && student.fields.branch == $('#branch').val() && student.fields.year == $('#year').val()){
-					$scope.edited= 0;
-					Materialize.toast('No data is updated', 4000);
-					return;
-				}
-		    
-			    $http({
-			        method : "POST",
-			        headers: {
-						'X-CSRFToken': jQuery("[name=csrfmiddlewaretoken]").val(),
-					},
-			  		data: {'pk': student.fields.user[0], 'first_name': $('#first_name').val(), 'last_name': $('#last_name').val(), 'branch': $('#branch').val(), 'year': $('#year').val()},
-			        url : "/portal/guide/students/update/"
 
-			    }).then(function mySuccess(response) {
-				    if(response.data == "Ok"){
+
+             $scope.addstudent = function(){
+
+			    if($('#username_add').val() != "" && $('#first_name_add').val() != "" && $('#last_name_add').val() != "" && $('#email_add').val() != "" && $('#year_add').val() != "" && $('#branch_add').val() != ""){
+
+			    		$http({
+					        method : "POST",
+					        headers: {
+								'X-CSRFToken': jQuery("[name=csrfmiddlewaretoken]").val(),
+							},
+					  		data: {	'username': $('#username_add').val(), 
+					  				'first_name': $('#first_name_add').val(), 
+					  				'last_name': $('#last_name_add').val(), 
+					  				'email': $('#email_add').val(), 
+					  				'year': $('#year_add').val(), 
+					  				'branch': $('#branch_add').val()
+					  			},
+					        url : "/portal/guide/students/add/"
+
+					    }).then(function mySuccess(response) {
+						    if(response.data == "Ok"){
+						    	Materialize.toast('Student details for id ' + $('#username_add').val() +  ' added', 4000);
+								$scope.refresh();
+								$('#username_add').val("");
+								$('#first_name_add').val("");
+								$('#last_name_add').val("");
+								$('#email_add').val("");
+								$('#year_add').val("");
+								$('#branch_add').val("");
+								$('#modal1').modal('close');
+						    }
+					    }, function myError(response) {
+					        alert(response.statusText);
+					    });
+				}
+				else{
+					Materialize.toast('Fill all the fields to continue', 4000);
+				}
+			    
+			}
+
+
+            $scope.updatevalue = function(student){
+			    if(student.fields.user.first_name == $('#first_name').val() && student.fields.user.last_name == $('#last_name').val() && student.fields.branch == $('#branch').val() && student.fields.year == $('#year').val()){
 						$scope.edited= 0;
-						$scope.refresh();
-					    	Materialize.toast('Student details for id ' + student.fields.stud_id +  ' updated', 4000);
-				    }
-			    }, function myError(response) {
-			        alert(response.statusText);
-					$scope.edited= 0;
-			    });
+						Materialize.toast('No data is updated', 4000);
+						return;
+					}
+			    
+				    $http({
+				        method : "POST",
+				        headers: {
+							'X-CSRFToken': jQuery("[name=csrfmiddlewaretoken]").val(),
+						},
+				  		data: {	'username': student.fields.user.username, 
+				  				'first_name': $('#first_name').val(), 
+				  				'last_name': $('#last_name').val(), 
+				  				'branch': $('#branch').val(), 
+				  				'year': $('#year').val()
+				  			},
+				        url : "/portal/guide/students/update/"
+
+				    }).then(function mySuccess(response) {
+					    if(response.data == "Ok"){
+							$scope.edited= 0;
+							$scope.refresh();
+						    	Materialize.toast('Student details for id ' + student.fields.user.username +  ' updated', 4000);
+					    }
+				    }, function myError(response) {
+				        alert(response.statusText);
+						$scope.edited= 0;
+				    });
 			}
 
 
