--- a/portal/templates/studentProfile.html
+++ b/portal/templates/studentProfile.html
@@ -201,7 +201,7 @@
 			$scope.refresh = function(){
 			    $http.get("/portal/students/" + $location.absUrl().split('/')[$location.absUrl().split('/').length - 2]).then(function(response) {
 			  		$scope.student = response.data;
-					alert($scope.student);
+					alert( $location.absUrl().split('/')[$location.absUrl().split('/').length - 2] + " " + response.data);
 			    });
 			}
 			$scope.refresh();
