--- a/portal/templates/studentProfile.html
+++ b/portal/templates/studentProfile.html
@@ -200,7 +200,7 @@
 		
 			$scope.refresh = function(){
 			    $http.get("/portal/students/" + $location.absUrl().split('/')[$location.absUrl().split('/').length - 2]).then(function(response) {
-			  		$scope.student = response.data;
+			  		$scope.student = response.data[0];
 					alert( $location.absUrl().split('/')[$location.absUrl().split('/').length - 2] + " " + response.data);
 			    });
 			}
