--- a/portal/templates/studentProfile.html
+++ b/portal/templates/studentProfile.html
@@ -46,7 +46,8 @@
              </ul>
         </div>
    	</nav>
-
+	
+	{% verbatim %}
 	<div class="container">
 		<br>
 		<div class="row hide-on-small-only">
@@ -82,7 +83,6 @@
 			</div>
 		</div>
 		
-		{% verbatim %}
 		<div class="row hide-on-med-and-up">
 			<div class="col s12 center-align">
 				<img class="circle responsive-img" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/005/063/234/3846abf.jpg" style="border:1px black solid" width="200px" >
@@ -95,7 +95,7 @@
 				</div>
 				<div class="row">
 					<div class="col s6 right-align"><label class="active" for="last_name">Last Name: </label></div>
-					<div class="col s6">{{ student.fields.last_name }}</div>
+					<div class="col s6">{{ student.fields.user.last_name }}</div>
 				</div>
 				<div class="row">
 					<div class="col s6 right-align"><label class="active" for="dob">Date of birth: </label></div>
@@ -122,7 +122,7 @@
 		<div class="row hide-on-small-only">
 			<div class="row">
 				<div class="col m2 right-align"><label class="active" for="email">Email Id</label></div>
-				<div class="col m2"><td class="right-align">{{ student.fields.email }}</div>
+				<div class="col m2"><td class="right-align">{{ student.fields.user.email }}</div>
 
 				<div class="col m2 right-align"><label class="active" for="password">Password</label></div>
 				<div class="col m2"><td class="right-align">**********</div>
@@ -134,7 +134,7 @@
 		<div class="row hide-on-med-and-up">
 			<div class="row">
 				<div class="col s6 right-align"><label class="active" for="email">Email Id</label></div>
-				<div class="col s6"><td class="right-align">{{ student.fields.email }}</div>
+				<div class="col s6"><td class="right-align">{{ student.fields.user.email }}</div>
 			</div>
 			<div class="row">
 				<div class="col s6 right-align"><label class="active" for="password">Password</label></div>
@@ -189,7 +189,6 @@
 			$scope.refresh = function(){
 			    $http.get("/portal/students/" + $location.absUrl().split('/')[$location.absUrl().split('/').length - 2]).then(function(response) {
 			  		$scope.student = response.data[0];
-					alert( $location.absUrl().split('/')[$location.absUrl().split('/').length - 2] + " " + response.data);
 			    });
 			}
 			$scope.refresh();
