--- a/portal/templates/forms/addProject.html
+++ b/portal/templates/forms/addProject.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -46,8 +47,6 @@
             </ul>
 
             <ul class="side-nav" id="mobile-demo">
-            	<li><a href="/portal/guide/students/crud/"><i class="material-icons left">list</i>Students</a></li>
-                <li><a href="/portal/guide/projects/crud/"><i class="material-icons left">list</i>Projects</a></li>
                 <li><a href="/portal/signout/"><i class="material-icons left">perm_identity</i>Logout</a></li>
              </ul>
         </div>
@@ -68,34 +67,35 @@
 		<table class="bordered">
 			<thead>
 				<tr>
-					<th ng-click="orderByMe('fields.user.username')">Student Id</th>
-					<th ng-click="orderByMe('fields.user.first_name')">First Name</th>
-					<th ng-click="orderByMe('fields.user.last_name')">Last Name</th>
+					<th ng-click="orderByMe('fields.project_id')">Project Id</th>
+					<th ng-click="orderByMe('fields.name')">Project Name</th>
+					<th ng-click="orderByMe('fields.description')">Description</th>
 					<th ng-click="orderByMe('fields.branch')">Branch</th>
 					<th ng-click="orderByMe('fields.year')">Year</th>
-					<th><a data-target="modal1" class="btn-floating btn-small waves-effect waves-light red modal-trigger"><i class="material-icons" ng-click="addStud()">add</i></a></th>
+					<th><a data-target="modal1" class="btn-floating btn-small waves-effect waves-light red modal-trigger"><i class="material-icons" ng-click="addProject()">add</i></a></th>
 				</tr>
 			</thead>
 			<tbody>
 				{% csrf_token %}
 				{% verbatim %}
-				<tr ng-repeat="student in students | orderBy:sort:reverse | filter: tableValue">
-					<td><a href="/portal/guide/students/{{student.fields.user.username}}/">{{student.fields.user.username}}</a></td>
-					<td ng-if="edited == student.fields.user.username"><div class="input-field"><input id="first_name" type="text" value={{student.fields.user.first_name}} /></div></td>
-					<td ng-if="edited == student.fields.user.username"><div class="input-field"><input id="last_name" type="text" value={{student.fields.user.last_name}} /></div></div></td>
-					<td ng-if="edited == student.fields.user.username"><div class="input-field"><input id="branch" type="text" value={{student.fields.branch}} /></div></td>
-					<td ng-if="edited == student.fields.user.username"><div class="input-field"><input id="year" type="text" value={{student.fields.year}} /></div></td>	
+				<tr ng-repeat="project in projects | orderBy:sort:reverse | filter: tableValue">
+					<td><a href="/portal/guide/projects/{{project.fields.project_id}}/">{{project.fields.project_id}}</a></td>
 
-					<td ng-if="edited != student.fields.user.username">{{student.fields.user.first_name}}</td>
-					<td ng-if="edited != student.fields.user.username">{{student.fields.user.last_name}}</td>
-					<td ng-if="edited != student.fields.user.username">{{student.fields.branch}}</td>
-					<td ng-if="edited != student.fields.user.username">{{student.fields.year}}</td>
+					<td ng-if="edited == project.fields.project_id"><div class="input-field"><input id="name" type="text" value={{project.fields.name}} /></div></td>
+					<td ng-if="edited == project.fields.project_id"><div class="input-field"><input id="description" type="text" value={{project.fields.description}} /></div></div></td>
+					<td ng-if="edited == project.fields.project_id"><div class="input-field"><input id="branch" type="text" value={{project.fields.branch}} /></div></td>
+					<td ng-if="edited == project.fields.project_id"><div class="input-field"><input id="year" type="text" value={{project.fields.year}} /></div></td>	
 
-					<td ng-if="edited != student.fields.user.username"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(student.fields.user.username)">create</i></a></td>
-					<td ng-if="edited == student.fields.user.username"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="updatevalue(student)">update</i></a></td>
+					<td ng-if="edited != project.fields.project_id">{{project.fields.name}}</td>
+					<td ng-if="edited != project.fields.project_id">{{project.fields.description}}</td>
+					<td ng-if="edited != project.fields.project_id">{{project.fields.branch}}</td>
+					<td ng-if="edited != project.fields.project_id">{{project.fields.year}}</td>
+
+					<td ng-if="edited != project.fields.project_id"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(project.fields.project_id)">create</i></a></td>
+					<td ng-if="edited == project.fields.project_id"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="updatevalue(project)">update</i></a></td>
 					
-					<td ng-if="edited == student.fields.user.username"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(0)">cancel</i></a></td>
-					<td ng-if="edited != student.fields.user.username"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="delete(student.fields.user.username)">delete</i></a></td>
+					<td ng-if="edited == project.fields.project_id"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(0)">cancel</i></a></td>
+					<td ng-if="edited != project.fields.project_id"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="delete(project.fields.project_id)">delete</i></a></td>
 				</tr>
 				{% endverbatim %}
 			</tbody>
@@ -104,24 +104,20 @@
 
 		<div id="modal1" class="modal bottom-sheet">
 		    <div class="modal-content">
-		    	<h4>Add student</h4>
+		    	<h4>Add Project</h4>
 		        <div class="row">
 	        		<div class="col s12 m12">
 	        			<div class="input-field inline">
-							<input id="username_add" type="text" name="username" required="yes" maxlength="10" title="Alphanumerics, only with 10 characters">
-							<label for="username_add">Student ID</label>
+							<input id="project_id_add" type="text" name="project_id" required="yes" maxlength="10" title="Alphanumerics, only with 10 characters">
+							<label for="project_id_add">Project ID</label>
 						</div>
 						<div class="input-field inline">
-							<input id="first_name_add" type="text" name="first_name" required="yes" maxlength="20" title="First Name">
-							<label for="first_name_add">First Name</label>
+							<input id="name_add" type="text" name="name" required="yes" maxlength="20" title="Name">
+							<label for="name_add">Name</label>
 						</div>
 						<div class="input-field inline">
-							<input id="last_name_add" type="text" name="last_name" required="yes" maxlength="20" title="Last_name">
-							<label for="last_name_add">Last Name</label>
-						</div>
-	        			<div class="input-field inline">
-							<input id="email_add" type="email" name="email" required="yes" maxlength="50" title="Email address">
-							<label for="email_add">Email</label>
+							<input id="description_add" type="text" name="description" required="yes" maxlength="20" title="Description">
+							<label for="description_add">Description</label>
 						</div>
 						<div class="input-field inline">
 							<input id="branch_add" type="text" name="branch" required="yes" maxlength="3" title="3 letter branch name">
@@ -129,10 +125,10 @@
 						</div>
 						<div class="input-field inline">
 							<input id="year_add" type="text" name="year" required="yes" maxlength="4" title="Joining year">
-							<label for="year_add">Year</label>
+							<label for="last_name">Year</label>
 						</div>
 						<div class="input-field inline">
-	                		<input type="button" class="waves-effect waves-light btn blue" ng-click="addstudent()" value="Add student">
+	                		<input type="button" class="waves-effect waves-light btn blue" ng-click="addproject()" value="Add project">
 	                	</div>
 					</div>
 			    </div>
@@ -144,32 +140,28 @@
 	<script type="text/javascript">
 		var app = angular.module('myApp', []);
 		app.controller('myCtrl', function($scope, $http) {
-			
-			if(jQuery("[id=last_login]").val() != "")
-				Materialize.toast('Last Login: ' + jQuery("[id=last_login]").val(), 4000, 'rounded');
 
-			$scope.sort = "fields.user.username";
+			$scope.sort = "fields.project_id";
 			$scope.reverse = false;
 			$scope.add = false;
 			
-			$scope.edit= function(username){
-            	$scope.edited= username;
+			$scope.edit= function(project_id){
+            	$scope.edited= project_id;
             }
 
 
  			
 		 	// new changes		
-			$scope.delete= function(username){
+			$scope.delete= function(project_id){
 				var message= confirm('Are you sure you want to delete this record from the database?');
 			    if (message) {
-					
-					$http.get("/portal/guide/students/delete/"+username+"/").then(function(response) {
-			        $scope.deleteinfo = response.data;
+					$http.get("/portal/guide/projects/delete/"+project_id+"/").then(function(response) {
+			        	$scope.deleteinfo = response.data;
 				        if($scope.deleteinfo=="OK"){
-							Materialize.toast('Deleted the student with ID: '+ username, 4000);
+						Materialize.toast('Deleted the project with ID: '+ project_id, 4000);
 							$scope.refresh();
 				        }
-				    });
+			    	});
 				} else {
 					Materialize.toast('Changed mind', 2000);
 				}
@@ -177,34 +169,30 @@
             }
 
 
-             $scope.addstudent = function(){
-
-			    if($('#username_add').val() != "" && $('#first_name_add').val() != "" && $('#last_name_add').val() != "" && $('#email_add').val() != "" && $('#year_add').val() != "" && $('#branch_add').val() != ""){
-
+             $scope.addproject = function(){
+			    if($('#project_id_add').val() != "" && $('#name_add').val() != "" && $('#description_add').val() != "" && $('#branch_add').val() != "" && $('#year_add').val() != ""){
 			    		$http({
 					        method : "POST",
 					        headers: {
 								'X-CSRFToken': jQuery("[name=csrfmiddlewaretoken]").val(),
 							},
-					  		data: {	'username': $('#username_add').val(), 
-					  				'first_name': $('#first_name_add').val(), 
-					  				'last_name': $('#last_name_add').val(), 
-					  				'email': $('#email_add').val(), 
-					  				'year': $('#year_add').val(), 
-					  				'branch': $('#branch_add').val()
+					  		data: {	'project_id': $('#project_id_add').val(), 
+					  				'name': $('#name_add').val(), 
+					  				'description': $('#description_add').val(), 
+					  				'branch': $('#branch_add').val(), 
+					  				'year': $('#year_add').val()
 					  			},
-					        url : "/portal/guide/students/add/"
+					        url : "/portal/guide/projects/add/"
 
 					    }).then(function mySuccess(response) {
 						    if(response.data == "Ok"){
-						    	Materialize.toast('Student details for id ' + $('#username_add').val() +  ' added', 4000);
+						    	Materialize.toast('Project details for id ' + $('#project_id_add').val() +  ' added', 4000);
 								$scope.refresh();
-								$('#username_add').val("");
-								$('#first_name_add').val("");
-								$('#last_name_add').val("");
-								$('#email_add').val("");
-								$('#year_add').val("");
+								$('#project_id_add').val("");
+								$('#name_add').val("");
+								$('#description_add').val("");
 								$('#branch_add').val("");
+								$('#year_add').val("");
 								$('#modal1').modal('close');
 						    }
 					    }, function myError(response) {
@@ -218,8 +206,8 @@
 			}
 
 
-            $scope.updatevalue = function(student){
-			    if(student.fields.user.first_name == $('#first_name').val() && student.fields.user.last_name == $('#last_name').val() && student.fields.branch == $('#branch').val() && student.fields.year == $('#year').val()){
+            $scope.updatevalue = function(project){
+			    if(project.fields.name == $('#name').val() && project.fields.description == $('#description').val() && project.fields.branch == $('#branch').val() && project.fields.year == $('#year').val()){
 						$scope.edited= 0;
 						Materialize.toast('No data is updated', 4000);
 						return;
@@ -230,19 +218,19 @@
 				        headers: {
 							'X-CSRFToken': jQuery("[name=csrfmiddlewaretoken]").val(),
 						},
-				  		data: {	'username': student.fields.user.username, 
-				  				'first_name': $('#first_name').val(), 
-				  				'last_name': $('#last_name').val(), 
+				  		data: {	'project_id': project.fields.project_id, 
+				  				'name': $('#name').val(), 
+				  				'description': $('#description').val(), 
 				  				'branch': $('#branch').val(), 
 				  				'year': $('#year').val()
 				  			},
-				        url : "/portal/guide/students/update/"
+				        url : "/portal/guide/projects/update/"
 
 				    }).then(function mySuccess(response) {
 					    if(response.data == "Ok"){
 							$scope.edited= 0;
 							$scope.refresh();
-						    	Materialize.toast('Student details for id ' + student.fields.user.username +  ' updated', 4000);
+						    	Materialize.toast('Project details for id ' + project.fields.project_id +  ' updated', 4000);
 					    }
 				    }, function myError(response) {
 				        alert(response.statusText);
@@ -253,8 +241,8 @@
 
 
             $scope.refresh= function(){
-			    $http.get("/portal/guide/students/").then(function(response) {
-			  		$scope.students = response.data;
+			    $http.get("/portal/guide/projects/").then(function(response) {
+			  		$scope.projects = response.data;
 			    });
 			}
 			
@@ -263,7 +251,7 @@
 				$scope.reverse = !$scope.reverse;
 			}
 			
-			$scope.addStud = function(){
+			$scope.addProject = function(){
 				$scope.add = !$scope.add;
 			}
 			
